fable/test/semantic_error/missing_include.f
      program prog
      include '/bin/sh/should/never/exist'
      end
